# lemmy

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  config.json  help.txt  lemmy.py  pyproject.toml
lemmy/: __main__.py  app.py  cli.py  client.py  config.py  fastmcp_client.py  render.py
lemmy/tools/: __init__.py  schema.json  web.py
